# promquery

./: CHANGELOG.md  Cargo.toml  README.md  metrics.txt
.github/workflows/: release.yml  rust.yml
src/: main.rs
