[package]
name = "promquery"
version = "1.1.1"
edition = "2021"
repository = "https://github.com/romac/promquery"
description = "Query and visualize Prometheus metrics from the command-line."
authors = ["Romain Ruetschi <github@romac.me>"]
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6.3"
derive_more = { version = "2", features = ["display"] }
ordered-float = "5"
owo-colors = "4"
pluralizer = "0.5.0"
prometheus-parse = "0.2.5"
ureq = "3"
textplots = "0.8.6"
